# virtualization-cgra

./: .gitignore  .gitmodules  CMakeLists.txt  graph.cc  graph.hh  io.cc  io.hh  main.cpp
src/: CMakeLists.txt  graph.cc  graph.hh  io.cc  io.hh  pass.cc  pass.hh
tests/: CMakeLists.txt  test_graph.cc  test_io.cc
tests/vectors/: camera_pipeline.packed  cascade.packed  resnet_b2b.packed
tools/: CMakeLists.txt  partition.cpp
